build/log/idf_py_stderr_output_142197
/home/pi/httptc/main/nvs_store.c: In function 'load_config_from_nvs':
/home/pi/httptc/main/nvs_store.c:34:25: error: invalid type argument of unary '*' (have 'int32_t' {aka 'long int'})
   34 |                         *output_delay_ms_val = 100; // default
      |                         ^~~~~~~~~~~~~~~~~~~~
/home/pi/httptc/main/nvs_store.c:22:12: warning: unused variable 'len' [-Wunused-variable]
   22 |     size_t len;
      |            ^~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:108: esp-idf/main/CMakeFiles/__idf_main.dir/nvs_store.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/pi/httptc/main/httptc.c: In function 'app_main':
/home/pi/httptc/main/httptc.c:40:27: error: 'temp' undeclared (first use in this function)
   40 |     load_config_from_nvs(&temp,&output_delay_ms);
      |                           ^~~~
/home/pi/httptc/main/httptc.c:40:27: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/httptc.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6135: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:149: all] Error 2
